--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,26 @@
-appdirs==1.4.3
-atomicwrites==1.3.0
-attrs==19.1.0
-black==19.3b0
-brython==3.7.3
-Click==7.0
-cycler==0.10.0
-ez-setup==0.9
-Flask==1.1.0
-importlib-metadata==0.18
-itsdangerous==1.1.0
-Jinja2==2.10.1
-joblib==0.13.2
-kmodes==0.10.1
-MarkupSafe==1.1.1
-matplotlib==1.5.3
-more-itertools==7.1.0
-mypy==0.701
-mypy-extensions==0.4.1
-numpy==1.16.3
-packaging==19.0
-pandas==0.24.2
-pluggy==0.12.0
-py==1.8.0
-pycodestyle==2.5.0
-pyparsing==2.1.10
-pyproj==1.9.5.1
-pytest==5.0.0
-pytest-runner==5.1
-python-dateutil==2.6.0
-pytz==2016.10
-requests==2.14.2
-scikit-learn==0.21.2
-scipy==1.3.0
-seaborn==0.9.0
-six==1.10.0
-sklearn-pandas==1.8.0
-toml==0.10.0
-typed-ast==1.3.5
-wcwidth==0.1.7
-Werkzeug==0.15.4
-zipp==0.5.1
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: osx-64
+ca-certificates=2019.5.15=1
+certifi=2019.6.16=py37_1
+click=7.0=py37_0
+flask=1.1.1=py_0
+itsdangerous=1.1.0=py37_0
+jinja2=2.10.1=py37_0
+libcxx=4.0.1=hcfea43d_1
+libcxxabi=4.0.1=hcfea43d_1
+libedit=3.1.20181209=hb402a30_0
+libffi=3.2.1=h475c297_4
+markupsafe=1.1.1=py37h1de35cc_0
+ncurses=6.1=h0a44026_1
+openssl=1.1.1=h1de35cc_0
+pip=19.2.2=py37_0
+python=3.7.4=h359304d_1
+readline=7.0=h1de35cc_5
+setuptools=41.0.1=py37_0
+sqlite=3.29.0=ha441bb4_0
+tk=8.6.8=ha441bb4_0
+werkzeug=0.15.5=py_0
+wheel=0.33.4=py37_0
+xz=5.2.4=h1de35cc_4
+zlib=1.2.11=h1de35cc_3
