--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,12 @@ Jinja2==2.11.2
 joblib==0.16.0
 MarkupSafe==1.1.1
 numpy==1.19.1
+pandas==1.1.4
+python-dateutil==2.8.1
+pytz==2020.4
 scikit-learn==0.23.2
 scipy==1.5.2
+six==1.15.0
 threadpoolctl==2.1.0
 waitress==1.4.4
 Werkzeug==1.0.1
