--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 certifi==2021.5.30
 click==7.1.2
 Flask==1.1.2
+imbalanced-learn==0.8.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==0.16.0
 MarkupSafe==1.1.1
+nltk==3.6.3
 numpy==1.21.1
 pandas==1.1.4
 python-dateutil==2.8.1
